--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ h2{
 nav li{
   display:inline;
   padding-right:20px;
-
 }
 
 nav a{
@@ -33,10 +32,9 @@ nav a{
   text-decoration: none; 
 }
 
-/*Your Code Here*/
-/*Write selector/rule property to add an underline when
-links in the navigation are in the hover or focus state.*/
-
+nav a:hover{
+  text-decoration: underline;
+}
 
 .skip a{
   background: white;
@@ -45,21 +43,17 @@ links in the navigation are in the hover or focus state.*/
   -webkit-transition: top 1s ease-out;
   transition: top 1s ease-out;
   z-index: 1;
-
-  /*Your code here*/
+  position: absolute;
+  top: -40px;
 }
 
-/*Your Code Here*/
-/*Write selector/rule property to position the skip class element*/
+.skip a:focus{
+  position: absolute;
+  top: 0px;
+}
 
-/*Your Code Here*/
-/*Write selector/rule property to style all elements when in focus*/
-
-
-nav{
-  background-color: #ddd;
-  padding: 25px 0; 
-  text-align: left;
+*:focus{
+  border: 2px solid #000000;
 }
 
 footer{
@@ -67,13 +61,16 @@ footer{
   color: white;
   padding-top: 30px;
   text-align: center;
+  grid-column: 1 / -1;
+  grid-row: 7 / auto;
 }
 
-
-
-
-.container{
-  /*Your Code Here*/
+nav{
+  background-color: #dddddd;
+  padding: 25px 0;
+  text-align: left;
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 7;
 }
 
 header{
@@ -83,13 +80,10 @@ header{
   background-size: cover;       /* Parallax effect */
   color: white;
   height: 400px;                /* Parallax effect */
-
-  /*Your Code Here*/
-  /*Set background-image to header.jpg */
- 
-
-  grid-column: 1 / -1;  /*Can you explain what this does?*/
-  grid-row: 1 / auto;   /*Can you rewrite it?*/
+  background-image: url('../images/header.jpg');
+  background-color: #000000;
+  grid-column: 1 / span 7;  /*Can you explain what this does?*/
+  grid-row: 2 / span 1;   /*Can you rewrite it?*/
 }
 
 header p{
@@ -99,70 +93,68 @@ header p{
   text-align: center;
 }
 
-.about, .method, .clients, .contact{
-  /*Your Code Here*/
+.container{
+  display: grid;
+  grid-template-columns: 1fr, 5fr, 1fr;
+  grid-template-rows: 10px repeat(5,auto) 100px;
+  row-gap: 15px;
+}
 
+.about, .method, .clients, .contact{
+  grid-column: 2 / span 1;
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
-  /*Your Code Here*/
-
+  grid-column: 1 / span 7;
+  max-height: 700px;
 }
 
 .about, .about-image{
-   /*Your Code Here*/
-
+  grid-row: 3 / span 1;
 }
 
 .method, .method-image{
-   /*Your Code Here*/
-
+  grid-row: 4 / span 1;
 }
-
 
 .clients, .clients-image{
-    /*Your Code Here*/
-
+  grid-row: 5 / span 1;
 }
 
-
 .contact, .contact-image{
-    /*Your Code Here*/
-
+  grid-row: 6 / span 1;
 }
 
 .text-block{
 background-color: rgba(255, 255, 255, .8);
   border: 10px solid black;
   padding: 30px;
-  /*Your code here:*/
-
+  align-self: center;
 }
 
 
 @media all and (min-width: 800px){
   nav{
     padding: 30px 0px;
-    /*Your code here:*/
+    background-color: #dddddd;
+    align-self: center;
+    text-align: center;
   }
 
   .container{
-    /*Your code here:*/
-  }
+    display: grid;
+    grid-template-columns: 50px auto 500px auto 50px;
+    grid-template-rows: 400px 400px 400px 400px 400px;
+    }
 
   .about, .clients, .method-image, .contact-image{
-    /*Your code here:*/
-  }
+    grid-column: 3 / span 2;
+    }
 
   .about-image, .clients-image, .method, .contact{
-    /*Your code here:*/
+    grid-column: 2 / span 2;
   }
 }
-
-/*You do not need to modify any code below this line.
-It is included for accessibility to turn off animations
-and movement for people who have modified their 
-preferences to reduce motion.*/
 
 @media screen and (prefers-reduced-motion: reduce){
   html{
@@ -174,7 +166,6 @@ preferences to reduce motion.*/
     transition: none;        /* sets to default setting */
    }
 
-  /*Turn off parallax*/
   header{
     background-attachment: initial;
   }
