--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ header{
   height: 400px;                /* Parallax effect */
   background-image: url('../images/header.jpg');
   background-color: #000000;
-  grid-column: 1 / span 7;  /*Can you explain what this does?*/
-  grid-row: 2 / span 1;   /*Can you rewrite it?*/
+  grid-column: 1 / -1;  /*Can you explain what this does?*/
+  grid-row: 1 / auto;   /*Can you rewrite it?*/
 }
 
 header p{
@@ -96,7 +96,7 @@ header p{
 .container{
   display: grid;
   grid-template-columns: 1fr, 5fr, 1fr;
-  grid-template-rows: 10px repeat(5,auto) 100px;
+  grid-template-rows: repeat(5,auto);
   row-gap: 15px;
 }
 
@@ -105,24 +105,25 @@ header p{
 }
 
 .about-image, .method-image, .clients-image, .contact-image{
-  grid-column: 1 / span 7;
+  grid-column: 1 / span 4;
   max-height: 700px;
+  overflow: hidden;
 }
 
 .about, .about-image{
-  grid-row: 3 / span 1;
+  grid-row: 2 / span 1;
 }
 
 .method, .method-image{
-  grid-row: 4 / span 1;
+  grid-row: 3 / span 1;
 }
 
 .clients, .clients-image{
-  grid-row: 5 / span 1;
+  grid-row: 4 / span 1;
 }
 
 .contact, .contact-image{
-  grid-row: 6 / span 1;
+  grid-row: 5 / span 1;
 }
 
 .text-block{
