--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ header p{
 
 .container{
   display: grid;
-  grid-template-columns: 1fr, 5fr, 1fr;
+  grid-template-columns: 1fr 5fr 1fr;
   grid-template-rows: repeat(5,auto);
   row-gap: 15px;
 }
@@ -139,7 +139,7 @@ background-color: rgba(255, 255, 255, .8);
     padding: 30px 0px;
     background-color: #dddddd;
     align-self: center;
-    text-align: center;
+    text-align: left;
   }
 
   .container{
