--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ header{
   color: white;
   height: 400px;                /* Parallax effect */
   background-image: url('../images/header.jpg');
-  background-color: #000000;
+  /* background-color: #000000; */
   grid-column: 1 / -1;  /*Can you explain what this does?*/
   grid-row: 1 / auto;   /*Can you rewrite it?*/
 }
@@ -127,7 +127,7 @@ header p{
 }
 
 .text-block{
-background-color: rgba(255, 255, 255, .8);
+  background: rgba(255, 255, 255, .8);
   border: 10px solid black;
   padding: 30px;
   align-self: center;
