--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,14 @@ nav{
 }
 
 header{
-  background: url('/images/header.jpg') #000000 no-repeat center;
-  /* background-attachment: fixed; Parallax effect      */
-  /* background-position: center;  Parallax effect */
-  /* background-repeat: no-repeat; Parallax effect */
-  /* background-size: cover;       Parallax effect */
+  background-attachment: fixed; /* Parallax effect */     
+  background-position: center;  /* Parallax effect */
+  background-repeat: no-repeat; /* Parallax effect */
+  background-size: cover;       /* Parallax effect */
   color: white;
   height: 400px;                /* Parallax effect */
-  /* background-image: url('../images/header.jpg'); */
-  /* background-color: #000000; */
+  background-image: url('../images/header.jpg');
+  background-color: #000000;
   grid-column: 1 / -1;  /*Can you explain what this does?*/
   grid-row: 1 / auto;   /*Can you rewrite it?*/
 }
@@ -98,7 +97,7 @@ header p{
   display: grid;
   grid-template-columns: 1fr 5fr 1fr;
   grid-template-rows: repeat(5,auto);
-  row-gap: 15px;
+  grid-row-gap: 15px;
 }
 
 .about, .method, .clients, .contact{
